@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-12T08:28:04Z",
+  "timestamp" : "2022-08-12T16:37:56Z",
   "count_outdated" : 451,
   "uniques_outdated" : 42,
-  "count" : 611,
+  "count" : 613,
   "uniques" : 48,
   "views" : [
     {
@@ -42,8 +42,8 @@
     },
     {
       "timestamp": "2022-08-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
