@@ -1,5 +1,5 @@
 {
-  "count": 160,
+  "count": 162,
   "uniques": 1,
   "views": [
     {
@@ -29,7 +29,7 @@
     },
     {
       "timestamp": "2022-08-12T00:00:00Z",
-      "count": 1,
+      "count": 3,
       "uniques": 1
     }
   ]
